--- a/PoliTicker/PoliTicker/Page1.xaml
+++ b/PoliTicker/PoliTicker/Page1.xaml
@@ -28,24 +28,36 @@
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
 
-            <Button Click="gotoGovernor" BorderThickness="0" Style="{StaticResource ButtonStyle1}" HorizontalAlignment="Center" VerticalAlignment="Center" Width="200" Height="200" Margin="10,0,246,434">
+            <Button Click="gotoGovernor" BorderThickness="0" Style="{StaticResource ButtonStyle1}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10,0,216,404" Height="240" Width="230" >
                 <StackPanel>
-                    <Image x:Name="Governor" Source="nysgovernor.jpeg" Stretch="Fill" Margin="-20" VerticalAlignment="Center" HorizontalAlignment="Center" />
-                    <TextBlock Text="This button has picture!" TextAlignment="Center" />
+                    <Image x:Name="Governor" Source="nysgovernor.jpg" Stretch="Fill" Height="176" Width="176" />
+                    <TextBlock Text="Governor" TextAlignment="Center" ></TextBlock>
                 </StackPanel>
             </Button>
 
-            <Button BorderThickness="0" Style="{StaticResource ButtonStyle1}" HorizontalAlignment="Center" VerticalAlignment="Center" Height="229" Margin="281,0,10,405" Width="165" >
+            <Button BorderThickness="0" Style="{StaticResource ButtonStyle1}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="216,0,10,404" Height="240" Width="230" Click="gotoMayor">
                 <StackPanel>
-                    <Image Source="nysmayor.JPG" Stretch="Fill" />
-                    <TextBlock Text="Mayor Bloomberg" TextAlignment="Center" FontSize="12" FontFamily="Segoe WP Semibold" />
+                    <Image Source="nycMayor.jpg" Height="176" Width="176" />
+                    <TextBlock Text="Mayor" TextAlignment="Center" ></TextBlock>
                 </StackPanel>
             </Button>
 
-            <Image HorizontalAlignment="Left" Height="159" VerticalAlignment="Top" Width="159" Source="nyssenator1.jpg" Margin="25,236,0,0"/>
-            <Image HorizontalAlignment="Right" Height="159" VerticalAlignment="Top" Width="159" Source="nyssenator2.jpg" Margin="0,236,0,0"/>
+            <Button BorderThickness="0" Style="{StaticResource ButtonStyle1}" HorizontalAlignment="Center" VerticalAlignment="Center" Height="240" Width="230" Margin="10,230,216,174" >
+                <StackPanel>
+                    <Image HorizontalAlignment="Left" Height="176" VerticalAlignment="Top" Width="176" Source="nyssenator1.jpg"/>
+                    <TextBlock Text="Senator" TextAlignment="Center" ></TextBlock>
+                </StackPanel>
+            </Button>
+
+            <Button BorderThickness="0" Style="{StaticResource ButtonStyle1}" HorizontalAlignment="Center" VerticalAlignment="Center" Height="240" Width="230" Margin="216,230,10,174" >
+                <StackPanel>
+                    <Image HorizontalAlignment="Right" Height="176" VerticalAlignment="Top" Width="176" Source="nyssenator2.jpg" />
+                    <TextBlock Text="Senator" TextAlignment="Center" ></TextBlock>
+                </StackPanel>
+            </Button>
         </Grid>
-        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="the people no one cares about" VerticalAlignment="Top" Margin="12,407,0,0" Grid.Row="1" Height="140" Width="426"/>
+
+        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Representatives" VerticalAlignment="Top" Margin="103,516,0,0" Grid.Row="1" Height="52" Width="286" FontSize="36"/>
     </Grid>
 
 </phone:PhoneApplicationPage>
